src/test/ui/rfcs/rfc-2091-track-caller/error-with-main.stderr
error: `main` function is not allowed to be `#[track_caller]`
  --> $DIR/error-with-main.rs:1:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^
LL | fn main() {
   | --------- `main` function is not allowed to be `#[track_caller]`

error: aborting due to previous error

